@@ -70,7 +70,7 @@ public class Mod extends BinaryExpressionOperator {
         }
         right = (Integer) res.result;
         
-        res.result = new Integer(left % right);
+        res.result = Integer.valueOf(left % right);
         return res;
     }
     
@@ -93,7 +93,7 @@ public class Mod extends BinaryExpressionOperator {
         }
         right = (Long) res.result;
         
-        res.result = new Long(left % right);
+        res.result = Long.valueOf(left % right);
         return res;
     }
 
